--- a/список-книг/style.css
+++ b/список-книг/style.css
@@ -3,7 +3,7 @@
 :root{
     --primary: #4b6584;
     --secondary: #778ca3;
-    --light: #d1d8e0;
+    --light: #f3f4f5;
     --dark: #2C3A47;
     --blue: #2c80b8;
 }
@@ -58,7 +58,7 @@ input{
     padding: .5rem;
     outline: none;
     border-radius: 5px;
-    border: 1px solid var(--light);
+    border: 1px solid var(--secondary);
     font-size: 18px;
     color: var(--secondary);
 }
@@ -120,9 +120,10 @@ table{
 
 
     th {
-    color: white;
+    color: var(--dark);
     font-weight: 500;
-    background-color: var(--secondary);
+    border: 1px solid var(--secondary);
+    background-color: var(--light);
     }
 
     .title-row{
